ajustando o swagger
