# src/routes/acessosRoute.js
@@ -4,7 +4,7 @@ const router = express.Router();
 
 
 router.post("/add", controller.addNewVisitor);  //adiciona um novo visitante
-router.get("/all", controller.findAcessoByRG);  //traz todos os dados da base
+router.get("/all", controller.findAcessoAll);  //traz todos os dados da base
 router.delete("/:rg", controller.deleteAcesso); // apaga o primeiro visitante que achar pelo ID
 router.put("/:id", controller.UpdateVisitor); // atualiza o cadastro do visitante 
 
